<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">安卓开发工具包</string>
    <string name="action_settings">Settings</string>
    <string name="androidkf">Andriod开发工具包</string>
    <string name="diyizhang">第1章 Android应用与开发环境</string>
    <string name="dierzhang">第2章 Android应用的界面编程</string>
    <string name="disanzhang">第3章 事件处理  </string>
    <string name="disizhang">第4章 深入理解Activity</string>
    <string name="diwuzhang">第5章 进行通信 </string>
    <string name="diliuzhang">第6章 Android应用的资源 </string>
    <string name="diqizhang">第7章 图形与图像处理 </string>
    <string name="dibazhang">第8章 Android的数据存储和IO </string>
    <string name="dijiuzhang">第9章 数据共享</string>
    <string name="dishizhang">第10章 Receiver</string>
    <string name="dishiyizhang">第11章 多媒体应用开发</string>
    <string name="dishierzhang">第12章 OpenGL与3D应用开发</string>
    <string name="dishisanzhang">第13章 Android的网络应用</string>
    <string name="dishisizhang">第14章 管理Android手机桌面</string>
    <string name="dishiwuzhang">第15章 传感器应用开发</string>
    <string name="dishiliuzhang">第16章 GPS应用开发</string>
    <string name="dishiqizhang">第17章 使用Google Map服务</string>
    <string name="zjmxiayiye1">下一页</string>
    <string name="zjmshangyiye1">上一页</string>
    <string name="xianxingbuju">LinearLayout:线性布局</string>
    <string name="xiangduibuju">RelativeLayout:相对布局</string>
    <string name="jueduibuju">AbsoluteLayout:绝对布局</string>
    <string name="zhengbuju">FrameLayout:帧布局:</string>
    <string name="biaogebuju">TableLayout:表格布局</string>
    <string name="jisuanqi">计算器</string>
    <string name="denglujiemian">登录界面</string>
    <string name="fanhui003">返回</string>
    <string name="yonghuming">用户名：</string>
    <string name="yonghumima">密码：</string>
    <string name="qrmm">确认密码：</string>
    <string name="youxiang">邮箱：</string>
    <string name="sjh">手机号：</string>
    <string name="beizhu">备注：</string>
    <string name="login">登录</string>
    <string name="dengluxitong">进入登录系统</string>
    <string name="zhuce">注册</string>
    <string name="danxuananniu">单选按钮</string>
    <string name="fuxuananniu">复选按钮</string>
    <string name="world1">你好</string>
    <string name="world2">请选择以下美女：</string>
    <string name="red_title">红色</string>
    <string name="blue_title">蓝色</string>
    <string name="green_title">绿色</string>
    <string name="font_size">字体大小</string>
    <string name="font_color">字体颜色</string>
    <string name="plain_item">普通菜单项</string>
    <string name="font_10">10号字体</string>
    <string name="font_12">12号字体</string>
    <string name="font_14">14号字体</string>
    <string name="font_16">16号字体</string>
    <string name="font_18">18号字体</string>
    
    
    <string name="hello">Hello World, ValuesResTest!</string>
    <string name="app_name1">字符串、数字、尺寸资源</string>
    <string name="c1">F00</string>
    <string name="c2">0F0</string>
    <string name="c3">00F</string>
    <string name="c4">0FF</string>
    <string name="c5">F0F</string>
    <string name="c6">FF0</string>
    <string name="c7">07F</string>
    <string name="c8">70F</string>
    <string name="c9">F70</string>

</resources>